# findyourpet1

./: pyproject.toml
static/: links.xlsx
tasky/: asgi.py  settings.py  urls.py  views.py  wsgi.py
tasky/pet/: apps.py  models.py  urls.py  utils.py  views.py
tasky/pet/management/commands/: generate_pets.py  generate_urls.py  save_all_to_database.py
tasky/pet/migrations/: 0001_initial.py  0002_url.py
templates/: base.html  index.html
templates/pets/: index.html  show.html
