[tool.poetry]
name = "findyourpet"
version = "0.1.0"
description = "example test task for employment"
authors = ["Krushovice <kickstar69@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
